--- a/tasks/apparmor.yml
+++ b/tasks/apparmor.yml
@@ -17,22 +17,22 @@
     - grub
     - CIS-UBUNTU2004-1.6.1.2
 
-- name: configure pam_apparmor
-  become: 'yes'
-  ansible.builtin.lineinfile:
-    line: 'session optional pam_apparmor.so order=user,group,default'
-    dest: /etc/pam.d/apparmor
-    state: present
-    create: 'yes'
-    mode: 0755
-    owner: root
-    group: root
-  when: ansible_os_family == "Debian"
-  notify:
-    - update grub
-  tags:
-    - apparmor
-    - grub
+#- name: configure pam_apparmor
+#  become: 'yes'
+#  ansible.builtin.lineinfile:
+#    line: 'session optional pam_apparmor.so order=user,group,default'
+#    dest: /etc/pam.d/apparmor
+#    state: present
+#    create: 'yes'
+#    mode: 0755
+#    owner: root
+#    group: root
+#  when: ansible_os_family == "Debian"
+#  notify:
+#    - update grub
+#  tags:
+#    - apparmor
+#    - grub
 
 - name: get apparmor status
   become: 'yes'
