--- a/tasks/sshconfig.yml
+++ b/tasks/sshconfig.yml
@@ -34,7 +34,7 @@
     dest: "{{ sshd_trusted_user_ca_keys_file }}"
     mode: 644
     content: |
-      ssh-rsa {{ sshd_trusted_user_ca_key }}
+      {{ sshd_trusted_user_ca_keys_base64 | b64decode }}
 
 - name: configure sshd
   become: 'yes'
