--- a/tasks/sshconfig.yml
+++ b/tasks/sshconfig.yml
@@ -107,6 +107,7 @@
     group: root
     mode: 0600
     path: "{{ item.path }}"
+    state: file
   with_items: "{{ ssh_host_keys.files }}"
   loop_control:
     label: "{{ item.path }}"
