feat(toggles): add feature toggles auditd_enable, extras_enable, issue_enable, logind_enable, pam_enable, paths_enable, postfix_enable, resolved_enable, rkhunter_enable, sysctl_enable

--- a/defaults/main/sshd.yml
+++ b/defaults/main/sshd.yml
@@ -63,3 +63,7 @@ sshd_tcp_keep_alive: "no"
 sshd_use_dns: "no"
 sshd_use_pam: "yes"
 sshd_x11_forwarding: "no"
+
+sshd_authorized_principal_file: /etc/ssh/auth_principals/%u
+sshd_trusted_user_ca_keys_base64: ''
+sshd_trusted_user_ca_keys_file: /etc/ssh/trusted-CA.pem
