--- a/tasks/apparmor.yml
+++ b/tasks/apparmor.yml
@@ -2,7 +2,7 @@
 - name: Set Debian family AppArmor grub cmdline
   become: true
   ansible.builtin.lineinfile:
-    line: GRUB_CMDLINE_LINUX="$GRUB_CMDLINE_LINUX apparmor=1 security=apparmor"
+    line: GRUB_CMDLINE_LINUX="$GRUB_CMDLINE_LINUX apparmor=1 security=apparmor systemd.unified_cgroup_hierarchy=0"
     dest: /etc/default/grub.d/99-hardening-apparmor.cfg
     state: present
     create: true
@@ -26,7 +26,7 @@
     mode: "0640"
     owner: root
     group: root
-  when: ansible_os_family == "Debian"
+  when: ansible_os_family == "Debian" and pam_enable
   notify:
     - Update GRUB
   tags:
