--- a/defaults/main/misc.yml
+++ b/defaults/main/misc.yml
@@ -1,5 +1,5 @@
 ---
-install_aide: true
+install_aide: false
 reboot_ubuntu: false
 redhat_signing_keys:
   - 567E347AD0044ADE55BA8A5F199E2F91FD431D51
@@ -10,3 +10,14 @@ epel8_signing_keys:
   - 94E279EB8D8F25B21810ADF121EA45AB2F86D6A1
 epel9_signing_keys:
   - FF8AD1344597106ECE813B918A3872BF3228467C
+
+auditd_enable: false
+extras_enable: false
+issue_enable: false
+logind_enable: false
+pam_enable: false
+paths_enable: false
+postfix_enable: false
+resolved_enable: false
+rkhunter_enable: false
+sysctl_enable: false
