--- a/tasks/sshconfig.yml
+++ b/tasks/sshconfig.yml
@@ -25,6 +25,13 @@
     - sshd_config
     - M1041
 
+- name: set trusted ca keys
+  copy:
+    dest: "{{ sshd_trusted_user_ca_keys_file }}"
+    mode: 644
+    content: |
+      {{ sshd_trusted_user_ca_keys_base64 | b64decode }}
+
 - name: Remove sshd system crypto policy
   become: true
   ansible.builtin.lineinfile:
@@ -207,6 +214,7 @@
     group: root
     mode: "0600"
     path: "{{ item.path }}"
+    state: file
   with_items: "{{ ssh_host_keys.files }}"
   loop_control:
     label: "{{ item.path }}"
