--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -7,6 +7,7 @@
   ansible.builtin.include_tasks:
     file: resolvedconf.yml
   when:
+    - managed_systemd_resolved
     - ansible_virtualization_type not in ["container", "docker", "podman"]
 
 - name: Install epel-release and python dependencies
