--- a/tasks/usbguard.yml
+++ b/tasks/usbguard.yml
@@ -17,12 +17,12 @@
       when:
         - ansible_os_family == "RedHat"
 
-    - name: SLES family USBGuard package installation
+    - name: Suse family USBGuard package installation
       ansible.builtin.zypper:
         name: usbguard
         state: present
       when:
-        - ansible_os_family == "SLES"
+        - ansible_os_family == "Suse"
 
     - name: Configure RuleFile
       ansible.builtin.lineinfile:
