fix: add missing toggle

--- a/defaults/main/main.yml
+++ b/defaults/main/main.yml
@@ -14,5 +14,6 @@ manage_rkhunter: true
 manage_issue: true
 manage_postfix: true
 manage_motdnews: true
+manage_root_access: true
 manage_sudo: true
 manage_extras: true
