fix: don't install logrotate cron.daily for Suse

--- a/tasks/journalconf.yml
+++ b/tasks/journalconf.yml
@@ -57,6 +57,8 @@
     mode: "0750"
     state: present
     create: true
+  when:
+    - ansible_os_family != 'Suse'
   tags:
     - cron
     - logrotate
